<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/editSearch"
            android:layout_weight="1"
            android:textSize="18dp"
            android:inputType="textCapWords"
            android:hint="@string/search_for_a_city_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_label"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutButtons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:id="@+id/textCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textSize="22dp"
            android:text="@string/current_label" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/current_label" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/zero_label"
        android:textSize="50dp" />

    <TextView
        android:id="@+id/textWeatherStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22dp"
        android:hint="@string/app_name"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/humidity_label"/>
            <TextView
                android:id="@+id/textWind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/wind_label"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/temperature_label"/>
            <TextView
                android:id="@+id/textTempMaxMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/max_temp_label"/>
        </LinearLayout>
        <ImageView
            android:id="@+id/imageIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_unknown"/>
    </LinearLayout>
</LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:visibility="visible" />
    <ImageView
        android:id="@+id/imageNoCity"
        android:padding="20dp"
        android:visibility="gone"
        tools:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/no_city"/>
    <TextView
        android:id="@+id/textMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:drawablePadding="10dp"
        android:visibility="gone"
        tools:text="Wait..."
        tools:visibility="visible" />
</RelativeLayout>